<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TableLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/spacer"
                android:layout_width="wrap_content"
                android:layout_height="180px"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_span="4" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/clueOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clueOne"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:layout_span="4"
                android:paddingStart="10px" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/clueTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clueTwo"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:layout_span="4"
                android:paddingStart="10px" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/clueThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clueThree"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:layout_span="4"
                android:paddingStart="10px" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/clueFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clueFour"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:layout_span="4"
                android:paddingStart="10px" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/clueFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clueFive"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:layout_span="4"
                android:paddingStart="10px" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/clueSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clueSix"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:layout_span="4"
                android:paddingStart="10px" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/clueSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clueSeven"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:layout_span="4"
                android:paddingStart="10px" />
        </TableRow>

        <View style="@style/Divider"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/builtWord"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/builtWord"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="left" />

            <Button
                android:id="@+id/clearGuess"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/clearGuess" />

            <Button
                android:id="@+id/guessWord"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/guessWord" />

        </TableRow>

        <View style="@style/Divider"
            android:gravity="center_horizontal" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/tile0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="90dp" />

            <Button
                android:id="@+id/tile1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="90dp" />

            <Button
                android:id="@+id/tile2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="90dp" />

            <Button
                android:id="@+id/tile3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="90dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/tile4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/tile8"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile9"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile10"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile11"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/tile12"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile13"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile14"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile15"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/tile16"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile17"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile18"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/tile19"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <View style="@style/Divider"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/languageButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languageButton" />

            <TextView
                android:id="@+id/selectedLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/selectedLanguage"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/newGameButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newGameButton" />
        </TableRow>
    </TableLayout>


</FrameLayout>
